# keystone-sdk

./: .gitignore
examples/: CMakeLists.txt
examples/addition/: CMakeLists.txt
examples/addition/eapp/: add  add.c
examples/hello/: CMakeLists.txt
examples/hello-native/eapp/: eapp_native.c
examples/hello-native/host/: host_native.cpp
examples/hello/host/: host.cpp
examples/rv8-bench/: CMakeLists.txt  run_rv8-bench.sh
examples/rv8-bench/eapp/: primes.c  sha512.c
examples/rv8-bench/host/: host.cpp
examples/tests/: CMakeLists.txt  test-runner.cpp
examples/tests/attestation/: attestation.c
include/host/: Enclave.hpp  KeystoneDevice.hpp  Memory.hpp  Params.hpp  keystone_user.h
src/host/: Enclave.cpp  KeystoneDevice.cpp
tests/: keystone_test.cpp
tests/scripts/: setup_binary.sh
